--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ img {
   border-top: 1px solid #8AA0B0;
   margin-right: 15%;
   margin-left: 15%;
+  background-color:yellow;
 }
 
 /*Social media styles*/
