--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ td.snake_model {
   /* line-height: 28px; */
   transform: translateY(400px);
   animation: slideUp .8s ease-in-out forwards .8s;
-  font-size: 1vw;
+  font-size:calc(8px + 1.5vw);
   background-color: red;
 }
 
