--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,8 @@ td.snake_model {
 }
 
 .p {
-  /* line-height: 28px; */
+  width: auto;
+  background-color:red;
   transform: translateY(400px);
   animation: slideUp .8s ease-in-out forwards .8s;
 }
