--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -107,8 +107,8 @@ a.media:hover {
 div.research {
     text-align: center;
     color: #668591;
-    font-size: 3vh;
-    margin: 25vh;
+    font-size: 12px;
+    margin: 25%;
 }
 
 /*PROFILE*/
@@ -133,8 +133,8 @@ td.snake_model {
 /*Style for the elements within the sliding transitions*/
 .container{
   display: flex;
-  height: 70vh; 
-  width: 1000px;
+  height: 70%; 
+  width: 80%;
   justify-content: center;
   align-items: center;
   color: white;
@@ -197,7 +197,7 @@ td.snake_model {
 }
 
 .title{
-    font-size: 5vh;
+    font-size: 5%;
     color: #AEBBD0;
     margin-bottom: 20px;
     transform: translateY(100px);
@@ -210,7 +210,7 @@ td.snake_model {
   width: 90%;
   scroll-snap-type: y mandatory;
   flex-basis: 50%;
-  max-height: 80vh;
+  max-height: 80%;
   margin-left: auto;
   margin-right: auto;
   overflow-y: scroll;
@@ -218,7 +218,7 @@ td.snake_model {
 }
 
 .snap{
-	padding: 10vh;
+	padding: 10%;
   font-size: 1.4rem;
   text-align: center;
   scroll-snap-align: center;
