--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ td.snake_model {
   width: 90%;
   scroll-snap-type: y mandatory;
   flex-basis: 50%;
-  max-height: 80%;
+  max-height: 80vh;
   margin-left: auto;
   margin-right: auto;
   overflow-y: scroll;
