--- a/css/styles.css
+++ b/css/styles.css
@@ -76,17 +76,6 @@ img {
 }
 
 /*PROFILE*/
-div.profile {
-    text-align: center;
-    color: #668591;
-    font-size: 20px;
-    margin: 250px;
-}
-
-td.snake_model {
-    padding-left: 500px;
-}
-
 /*Sliding Transition*/
 :root {
   --secondary-color: #AEBBD0;
@@ -97,13 +86,13 @@ td.snake_model {
 /*Style for the elements within the sliding transitions*/
 .container{
   display: flex;
-  height: 70%; 
-  width: 80%;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  height: max(30vw,200px);
+  width: 90%;
+  overflow: hidden;
   color: white;
   animation: expand .8s ease forwards;
-  position: relative;
   background-color: var(--contrast-color);
   font-family: "courier new", monospace;
   transition: all .8s ease;
@@ -113,20 +102,44 @@ td.snake_model {
   background-color: var(--contrast-color2);
 }
 
-.container_content {
- width: 60%;
-}
-
-.container_content_inner {
-  width: 80%;
-  margin-left: 20px;
-  margin-right:20px;
-}
-
-.container_outer_img {
-  margin: 50px;
+.container_content_description {
+  overflow:scroll;
+  height:90%;
   width: 60%;
-  min-width: 200px;
+  border-radius: 15px;
+}
+
+.title{
+    font-size: 2vw;
+    color: #AEBBD0;
+    margin-bottom: 20px;
+    transform: translateY(100px);
+    animation: slideUp .8s ease forwards .5s;
+}
+
+.hide_title {
+  overflow: hidden;
+  height: auto;
+}
+
+.p {
+  text-align: center;
+  width:90%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1vw;
+}
+
+.hide_p {
+  overflow: scroll;
+  height: 80%;
+}
+
+.container_content_img {
+  background-color:red;
+  margin: 50px;
+  height:90%;
+  width: 40%;
   overflow: hidden;
 }
 
@@ -135,46 +148,11 @@ td.snake_model {
   animation: slideIn 1.5s ease-in-out forwards;
 }
 
-.picture_resize {
-  width: 60%;
-}
-
-.picture_resize1 {
-  width: 80%;
-}
-
-.hide_p {
-  height: auto;
-  overflow: hidden;
-  font-size: max(7px, 1vw);
-}
-
-.p {
-  width: auto;
-  transform: translateY(400px);
-  animation: slideUp .8s ease-in-out forwards .8s;
-}
-
-.hide_title {
-  overflow: hidden;
-  height: auto;
-}
-
-.title{
-    font-size: 5%;
-    color: #AEBBD0;
-    margin-bottom: 20px;
-    transform: translateY(100px);
-    animation: slideUp .8s ease forwards .5s;
-}
-
 /*Scroll Snap*/
 .parent {
-  margin-top: 0px;
-  width: 90%;
+  height: max(35vw, 300px);
+  width: 80%;
   scroll-snap-type: y mandatory;
-  flex-basis: 50%;
-  max-height: 80vh;
   margin-left: auto;
   margin-right: auto;
   overflow-y: scroll;
@@ -183,7 +161,6 @@ td.snake_model {
 
 .snap{
 	padding: 10%;
-  font-size: 5%;
   text-align: center;
   scroll-snap-align: center;
   scroll-snap-stop: always;
