--- a/css/styles.css
+++ b/css/styles.css
@@ -103,9 +103,12 @@ img {
 }
 
 .container_content_description {
-  overflow:scroll;
-  height:90%;
-  width: 60%;
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  overflow:hidden;
+  height: 90%;
+  width: 40%;
   border-radius: 15px;
 }
 
@@ -139,7 +142,7 @@ img {
   background-color:red;
   margin: 50px;
   height:90%;
-  width: 40%;
+  width: 60%;
   overflow: hidden;
 }
 
