--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,16 @@ img {
   animation: slideIn 1.5s ease-in-out forwards;
 }
 
+.container_content_mp4 {
+  margin: 50px;
+  width: 60%;
+}
+
+.container_mp4 {
+  width: 100%;
+  animation: slideIn 1.5s ease-in-out forwards;
+}
+
 /*Scroll Snap*/
 .parent {
   height: max(35vw, 300px);
