--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
 display: none;
 }
 
+body{
+	font-family: 'Open Sans', sans-serif;
+}
+
 /*Color theme: #29585C #416A71 #668591 #8AA0B0 #AEBBD0 #667a85 #999eaf #a9b3b4*/
 
 @import url("//use.fontawesome.com/releases/v5.15.3/css/all.css");
