--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,9 @@ table {
 }
 
 /*Standardized fonts*/
-body {
+/* body {
     font-family: "courier new", monospace;
-}
+} */
 
 h2 {
     font-size: 20px;
